docs: add section opportunistisches vorgehen

--- a/docs/repetitorium/Repetitorium SE.tex
+++ b/docs/repetitorium/Repetitorium SE.tex
@@ -192,6 +192,7 @@
 %--------------------------------------------------------------------------
 % Die Kapitel werden in separaten .tex-Dateien abgelegt und hier eingebunden.
 	\input{chapters/Software und Software Engineering/index}
+	\input{chapters/Uebersicht ueber die Phasen des Entwicklungszyklus/index}
 
 	\printnoidxglossary[title=Glossar, toctitle=Glossar]
 
