--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -35,3 +35,23 @@
     address = {USA},
     abstract = {From the Publisher: Best selling author and world-renowned software development expert Robert C. Martin shows how to solve the most challenging problems facing software developers, project managers, and software project leaders today. This comprehensive, pragmatic tutorial on Agile Development and eXtreme programming, written by one of the founding father of Agile Development: Teaches software developers and project managers how to get projects done on time, and on budget using the power of Agile Development. Uses real-world case studies to show how to of plan, test, refactor, and pair program using eXtreme programming. Contains a wealth of reusable C++ and Java code. Focuses on solving customer oriented systems problems using UML and Design Patterns. Robert C. Martin is President of Object Mentor Inc. Martin and his team of software consultants use Object-Oriented Design, Patterns, UML, Agile Methodologies, and eXtreme Programming with worldwide clients. He is the author of the best-selling book Designing Object-Oriented C++ Applications Using the Booch Method (Prentice Hall, 1995), Chief Editor of, Pattern Languages of Program Design 3 (Addison Wesley, 1997), Editor of, More C++ Gems (Cambridge, 1999), and co-author of XP in Practice, with James Newkirk (Addison-Wesley, 2001). He was Editor in Chief of the C++ Report from 1996 to 1999. He is a featured speaker at international conferences and trade shows. Author Biography: ROBERT C. MARTIN is President of Object Mentor Inc. Martin and his team of software consultants use Object-Oriented Design, Patterns, UML, Agile Methodologies, and eXtreme Programming with worldwide clients. He is the author of the best-selling book Designing Object-Oriented C++ Applications Using the Booch Method (Prentice Hall, 1995), Chief Editor of, Pattern Languages of Program Design 3 (Addison Wesley, 1997), Editor of, More C++ Gems (Cambridge, 1999), and co-author of XP in Practice, with James Newkirk (Addison-Wesley, 2001). He was Editor in Chief of the C++ Report from 1996 to 1999. He is a featured speaker at international conferences and trade shows.}
 }
+
+@Inbook{AABG14n,
+    author="Alpar, Paul
+and Alt, Rainer
+and Bensberg, Frank
+and Grob, Heinz Lothar
+and Weimann, Peter
+and Winter, Robert",
+    title="Phasenmodelle in der Systementwicklung",
+    bookTitle="Anwendungsorientierte Wirtschaftsinformatik: Strategische Planung, Entwicklung und Nutzung von Informationssystemen",
+    year="2014",
+    publisher="Springer Fachmedien Wiesbaden",
+    address="Wiesbaden",
+    pages="315--359",
+    abstract="Ein IS unterliegt wie jedes Produkt einem Lebenszyklus. Dieser Lebenszyklus ist in Zeitabschnitte, so genannte Phasen, unterteilt und wird im Folgenden kurz dargestellt, um die Einordnung der Systementwicklung in den Lebenszyklus aufzuzeigen. Anlehnend an die Norm ISO 12207 [ISO 12207 1995] ist dieser Lebenszyklus in Abbildung 14-1 dargestellt.",
+    isbn="978-3-658-00521-4",
+    doi="10.1007/978-3-658-00521-4_14",
+    url="https://doi.org/10.1007/978-3-658-00521-4_14"
+}
+
