docs: update index and bib refs

--- a/docs/repetitorium/Repetitorium SE.tex
+++ b/docs/repetitorium/Repetitorium SE.tex
@@ -210,6 +210,7 @@
 % Die Kapitel werden in separaten .tex-Dateien abgelegt und hier eingebunden.
 	\input{chapters/Software und Software Engineering/index}
 	\input{chapters/Uebersicht ueber die Phasen des Entwicklungszyklus/index}
+	\input{chapters/Prozessmodelle/index}
 
 	\glsaddall
 	\printnoidxglossary[title=Glossar, toctitle=Glossar]
